# my_study

./: README.md  evo_plot  lidarplot.m  para.txt  test.m
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/cloud_msgs/: cloud_info.h
devel/lib/lego_loam/: featureAssociation  imageProjection  mapOptmization  optimization  transformFusion
devel/lib/pkgconfig/: cloud_msgs.pc  lego_loam.pc  read_odom.pc
devel/lib/read_odom/: odom_listener  odom_pub
devel/share/cloud_msgs/cmake/: cloud_msgs-msg-paths.cmake  cloud_msgsConfig.cmake
devel/share/lego_loam/cmake/: lego_loamConfig.cmake
devel/share/read_odom/cmake/: read_odomConfig.cmake
devel/share/roseus/ros/cloud_msgs/: manifest.l
src/: .tags  .tags_sorted_by_file  test.cpp
src/LeGO-LOAM/: .tags  .tags_sorted_by_file
src/LeGO-LOAM/LeGO-LOAM/: .tags  .tags_sorted_by_file  CMakeLists.txt
src/LeGO-LOAM/LeGO-LOAM/include/: icp-ceres.h  stdtostring.h  utility.h
src/LeGO-LOAM/LeGO-LOAM/launch/: run.launch  runzcm.launch  test.rviz
src/LeGO-LOAM/LeGO-LOAM/src/: .tags  .tags_sorted_by_file  featureAssociation.cpp  imageProjection.cpp  mapOptmization.cpp  optimization(origin).cpp  optimization.cpp  optimization.sublime-workspace  parameters.cpp  parameters.h  readpara.cpp  readpara.h  viloam.sublime-project  viloam.sublime-workspace
src/LeGO-LOAM/LeGO-LOAM/src/factor/: .tags  .tags_sorted_by_file  imu_factor.h  integration_base.h  pose_local_parameterization.h
src/LeGO-LOAM/LeGO-LOAM/src/internal/: icp-ceres.cpp
src/LeGO-LOAM/LeGO-LOAM/src/temp/: optimization (copy)改了frame imu.cpp  optimization (跑通了窗口).cpp
src/LeGO-LOAM/LeGO-LOAM/src/utility/: .tags  .tags_sorted_by_file  parameters.h  utility_rotation.cpp
src/read_odom/: CMakeLists.txt
src/read_odom/src/: odom_listener.cpp  odom_pub.cpp  odom_struct.txt  odom_testlog.launch
src/rostozcm/: CMakeLists.txt  package.xml  pose.hpp
src/rostozcm/common/: nature.h
src/rostozcm/common/nature/: CMakeLists.txt  point.h  timestamp.cpp
src/rostozcm/include/: anchor_type_z.hpp  bbox2d_z.hpp  bbox2f_z.hpp  bbox2i_z.hpp  geometry_z.zcm  msg_header_z.hpp  msg_header_z.zcm  navigation_msg_z.hpp  navigation_z.hpp  navigation_z.zcm  point2d_z.hpp  point2f_z.hpp  point2i_z.hpp  pose.zcm  pose_z.hpp
src/rostozcm/src/: CMakeLists.txt  odom_listener.cpp  odom_listener副本.cpp  odom_testlog.launch
